--- a/public/project.json
+++ b/public/project.json
@@ -6,11 +6,11 @@
         "client": "Random",
         "role": "Product designer",
         "year": "2021",
-        "titleimage": "../src/assets/title1.png",
-        "secondimage": "../src/assets/fashion2.png", 
-        "thirdimage": "../src/assets/fashion3.png",
-        "fourthimage": "../src/assets/fashion4-1.png",
-        "fifthimage": "../src/assets/fashion4-2.png",
+        "titleimage": "../title1.png",
+        "secondimage": "../fashion2.png", 
+        "thirdimage": "../fashion3.png",
+        "fourthimage": "../fashion4-1.png",
+        "fifthimage": "../fashion4-2.png",
         "problem": "The main problem from the starts was client's lack of experience in a field and bad luck when finding their first agency. The UX and UI delivery that they have received from the agency was nowhere close to what they wanted and that's one of the reasons why the kept searching for a new designer until they found me.",
         "solution": "After our agreenment on collaboration, we took a step back and started right from the scratch rather then continuing with original logic of the app. The discovery phase was all about explaining me their business idea, analysing current competitors and their design solutions and its problems. After that, we came up with interviewing potential users and started prototyping phase enriched with series of A/B tests and user tests. After delivery of final prototype, I helped client with further support and negotiations with developers.",
         "a1h1": "Design and Testing",
@@ -33,11 +33,11 @@
         "client": "Winding Tree",
         "role": "UX designer",
         "year": "unknown",
-        "titleimage": "../src/assets/title2.png",
-        "secondimage": "../src/assets/fashion2.png",
-        "thirdimage": "../src/assets/blockchain3.png",
-        "fourthimage": "../src/assets/blockchain4.png",
-        "fifthimage": "../src/assets/blockchain5.png",
+        "titleimage": "../title2.png",
+        "secondimage": "../fashion2.png",
+        "thirdimage": "../blockchain3.png",
+        "fourthimage": "../blockchain4.png",
+        "fifthimage": "../blockchain5.png",
         "problem": "Main problem that Winding Tree faced as a new blockchain startup was lack of user friendliness in their product that could bring their business solution to broader line of customers. Their products aims on various smaller and biger players in travel industry, where not everyone is a tech savvy and therefore quality UX and clear communication is a goal to their potential success.",
         "solution": "In order to solve the problem, I started with studying of current state of the product, its technology and users. After this phase, I came up with ideas for improvement, which I later designed and tested. We used the improvements that passed the test in the new design solution with a simplified user flow that passed test of their users as was chosen as a better solution by most of them.",
         "a1h1": "Interviews & User Tests",
@@ -61,10 +61,10 @@
         "client": "Random",
         "role": "Product designer",
         "year": "unknown",
-        "titleimage": "../src/assets/title3.png",
-        "secondimage": "../src/assets/fashion2.png",
-        "thirdimage": "../src/assets/mallari3-1.png",
-        "fourthimage": "../src/assets/mallari4.png",
+        "titleimage": "../title3.png",
+        "secondimage": "../fashion2.png",
+        "thirdimage": "../mallari3-1.png",
+        "fourthimage": "../mallari4.png",
         "fifthimage": "",
         "problem": "Currently there is a large amount of competition when it comes to providing photovoltaic power plants and heat pumps in the central European region. It's hard to stand out, as each company has at least some website and most of them provide a similar service. Unfortunately, not everyone is at the top level and customer can easily end up with a bad offer and bad quality service.",
         "solution": "After analysing current state of the market and my client's needs, we came up with our solution. We have to create easy mobile first responsive web presentation that will stand out with it's clear design, aims at out target audience and educate them with valuable information and present our services in a way that builds trust and has an easy process to get contact information from potential customers.",
@@ -88,11 +88,11 @@
         "client": "Random",
         "role": "Product designer",
         "year": "2021",
-        "titleimage": "../src/assets/title4.png",
-        "secondimage": "../src/assets/fashion2.png", 
-        "thirdimage": "../src/assets/fashion3.png",
-        "fourthimage": "../src/assets/fashion4-1.png",
-        "fifthimage": "../src/assets/fashion4-2.png",
+        "titleimage": "../title4.png",
+        "secondimage": "../fashion2.png", 
+        "thirdimage": "../fashion3.png",
+        "fourthimage": "../fashion4-1.png",
+        "fifthimage": "../fashion4-2.png",
         "problem": "The main problem from the starts was client's lack of experience in a field and bad luck when finding their first agency. The UX and UI delivery that they have received from the agency was nowhere close to what they wanted and that's one of the reasons why the kept searching for a new designer until they found me.",
         "solution": "After our agreenment on collaboration, we took a step back and started right from the scratch rather then continuing with original logic of the app. The discovery phase was all about explaining me their business idea, analysing current competitors and their design solutions and its problems. After that, we came up with interviewing potential users and started prototyping phase enriched with series of A/B tests and user tests. After delivery of final prototype, I helped client with further support and negotiations with developers.",
         "a1h1": "Design and Testing",
@@ -115,11 +115,11 @@
         "client": "Winding Tree",
         "role": "UX designer",
         "year": "unknown",
-        "titleimage": "../src/assets/title5.png",
-        "secondimage": "../src/assets/fashion2.png",
-        "thirdimage": "../src/assets/blockchain3.png",
-        "fourthimage": "../src/assets/blockchain4.png",
-        "fifthimage": "../src/assets/blockchain5.png",
+        "titleimage": "../title5.png",
+        "secondimage": "../fashion2.png",
+        "thirdimage": "../blockchain3.png",
+        "fourthimage": "../blockchain4.png",
+        "fifthimage": "../blockchain5.png",
         "problem": "Main problem that Winding Tree faced as a new blockchain startup was lack of user friendliness in their product that could bring their business solution to broader line of customers. Their products aims on various smaller and biger players in travel industry, where not everyone is a tech savvy and therefore quality UX and clear communication is a goal to their potential success.",
         "solution": "In order to solve the problem, I started with studying of current state of the product, its technology and users. After this phase, I came up with ideas for improvement, which I later designed and tested. We used the improvements that passed the test in the new design solution with a simplified user flow that passed test of their users as was chosen as a better solution by most of them.",
         "a1h1": "Interviews & User Tests",
@@ -143,10 +143,10 @@
         "client": "Random",
         "role": "Product designer",
         "year": "unknown",
-        "titleimage": "../src/assets/title6.png",
-        "secondimage": "../src/assets/fashion2.png",
-        "thirdimage": "../src/assets/mallari3-1.png",
-        "fourthimage": "../src/assets/mallari4.png",
+        "titleimage": "../title6.png",
+        "secondimage": "../fashion2.png",
+        "thirdimage": "../mallari3-1.png",
+        "fourthimage": "../mallari4.png",
         "fifthimage": "",
         "problem": "Currently there is a large amount of competition when it comes to providing photovoltaic power plants and heat pumps in the central European region. It's hard to stand out, as each company has at least some website and most of them provide a similar service. Unfortunately, not everyone is at the top level and customer can easily end up with a bad offer and bad quality service.",
         "solution": "After analysing current state of the market and my client's needs, we came up with our solution. We have to create easy mobile first responsive web presentation that will stand out with it's clear design, aims at out target audience and educate them with valuable information and present our services in a way that builds trust and has an easy process to get contact information from potential customers.",
