--- a/public/project.json
+++ b/public/project.json
@@ -1,28 +1,30 @@
 [
     {
         "id": 1,
-        "theme": "purple",
-        "title": "Casting App",
-        "tag": "Product Design",
-        "titleparagraph": "My client for this project was a startup company trying to come up with a business solution to connect fashion models with agencies and event managers. They had very clear business vision and just needed a designer that could articulate their ideas into a final product and help them with shaping some of their functionalities to perfection.",
-        "client": "Random",
-        "role": "Product designer",
-        "year": "2021",
-        "titleimage": "../title1.png",
-        "secondimage": "../fashion2.png", 
-        "thirdimage": "../fashion3.png",
-        "fourthimage": "../fashion4-1.png",
-        "fifthimage": "../fashion4-2.png",
-        "problem": "The main problem from the starts was client's lack of experience in a field and bad luck when finding their first agency. The UX and UI delivery that they have received from the agency was nowhere close to what they wanted and that's one of the reasons why the kept searching for a new designer until they found me.",
-        "solution": "After our agreenment on collaboration, we took a step back and started right from the scratch rather then continuing with original logic of the app. The discovery phase was all about explaining me their business idea, analysing current competitors and their design solutions and its problems. After that, we came up with interviewing potential users and started prototyping phase enriched with series of A/B tests and user tests. After delivery of final prototype, I helped client with further support and negotiations with developers.",
-        "a1h1": "Design and Testing",
-        "a1p1": "Using Adobe XD, I translated my first sketches, wireframes and user flows into high-fidelity prototype. Then, I improved them by adding a few relevant stock images and relevant titles. At this stage, the product was defined enough for some user testing. After succesful a round of user tests with three people from the industry. We were satisfied with state of out product.",
-        "a1h2": "Prototype",
-        "a1p2": "After a few interactions with various agencies. Client have decided to create a simplified lighter variant (MVP) that would be focusing only on primary functionalities and features that bring the most of added value to cut out development costs by not developing secondary features that would be too expensive for early stage of the project. Therefore I had to go thru whole process once again and simplify some features to fulfill their wish and then run one more test session where I tested if users can still navigate themselves thru the app.",
-        "a2h1": "",
-        "a2p1": "",
+        "theme": "red",
+        "title": "Fitness Trainer Website",
+        "titleparagraph": "Barbara’s fitness coaching brand needed a robust digital presence to connect with clients, showcase services, and emphasize the results-driven approach to fitness. The goal was to create a user-friendly, visually appealing website to convert visitors into customers.",
+        "role": "UX/UI designer",
+        "titleimage": "../bara1.png",
+        "secondimage": "../bara2.png", 
+        "thirdimage": "../bara3.png",
+        "fourthimage": "../bara4.png",
+        "fourthimage2": "../bara5.png",
+        "fifthimage": "",
+        "problem": "The main challenge was to balance the technical fitness content with an accessible and motivational design. Barbara wanted to communicate her unique methodology while ensuring potential clients could easily navigate the site, find essential information, and take action in connecting with the trainer.",
+        "solution": "The solution involved designing a website that combined a sleek, professional aesthetic with practical functionality. Key features include:",
+        "dot1": "A modular layout that organizes content into digestible sections.",
+        "dot2": "Strategic use of testimonials and transformation images to build trust.",
+        "dot3": "Simplified navigation and strong call-to-action flow to guide users to leave their contat in relaxed way after building trust with no pressure.",
+        "a1h1": "Design process",
+        "a1p1": "The design process began with research and discovery, analyzing competitors' fitness websites and identifying Barbara's unique value propositions to differentiate her services. User personas were developed to ensure the design resonated with the target audience. Wireframing and prototyping established the website's structure and content hierarchy, with prototypes tested for usability.",
+        "a1h2": "",
+        "a1p2": "For visual design, a minimalist black-and-white palette with vibrant imagery conveyed energy and professionalism. Typography and iconography aligned with the brand identity. During development and testing, responsiveness across devices was prioritized, with feedback loops refining the user experience.",
+        "a2h1": "Key Factors for Success:",
+        "a2p1": "The success of the website was rooted in its user-centric approach, where all design decisions were informed by user behavior and preferences, resulting in a seamless and engaging experience.",
         "a2h2": "",
-        "a2p2": "",
+        "a2p2": "An emphasis on results was also key, with transformation photos, client testimonials, and evidence-based coaching principles prominently displayed to directly address user motivations. The site’s clear value proposition, including transparent pricing and detailed service descriptions, helped to build trust with potential clients. ",
+        "a2p3": "Additionally, optimization for conversions was prioritized, with strategically placed call-to-action button and a form to leave contact information, blog section was also introduced to give visitors new reasons to come back for new information and fitness recipes and engage themselves with the website and drives conversions.",
         "a3h1": "",
         "a3p1": "",
         "a3h2": "",
@@ -30,48 +32,47 @@
     },
     {
         "id": 2,
-        "theme": "blue",
-        "title": "Fitness Website",
-        "tag": "UX/UI Design",
-        "titleparagraph": "Winding Tree has been building decentralized, peer-to-peer and open-source solutions for the travel industry using blockchain technology. Their solutions could help with cutting out pointless fees from the travelling processes and make current industry standarts simple, transparent and up to date.",
-        "client": "Winding Tree",
-        "role": "UX designer",
-        "year": "unknown",
-        "titleimage": "../title2.png",
-        "secondimage": "../fashion2.png",
-        "thirdimage": "../blockchain3.png",
-        "fourthimage": "../blockchain4.png",
-        "fifthimage": "../blockchain5.png",
-        "problem": "Main problem that Winding Tree faced as a new blockchain startup was lack of user friendliness in their product that could bring their business solution to broader line of customers. Their products aims on various smaller and biger players in travel industry, where not everyone is a tech savvy and therefore quality UX and clear communication is a goal to their potential success.",
-        "solution": "In order to solve the problem, I started with studying of current state of the product, its technology and users. After this phase, I came up with ideas for improvement, which I later designed and tested. We used the improvements that passed the test in the new design solution with a simplified user flow that passed test of their users as was chosen as a better solution by most of them.",
-        "a1h1": "Interviews & User Tests",
-        "a1p1": "During discovery phase, I have held a serie of interviews with a couple of users from the industry has been chosen and been given a few tasks that they must accomplish. These tasks were signing up, creating new organization, creating new business unit, staking of our token, editing their profile and finding other companies using our product. Users were never interrupted and after finishing of all tasks, interview was held to gain some feedback about their experience. User interviews also continued later in the process after every usability test that has been done and the feedback from each interview has been used as a valid point for next design round. We had trhee iterations in total.",
-        "a1h2": "Personas",
-        "a1p2": "We wanted to form a deeper understanding of our users' business goals, needs, experiences and behaviors. So, we created five personas for each of our user segments. They were based on user interviews and surveys, and we kept updating them throughout the project as we gathered more data. We used these personas whenever we wanted to step out of ourselves and reconsider our initial ideas. Therefore I had to go thru whole process once again and simplify some features to fulfill their wish and then run one more test session where I tested if users can still navigate themselves thru the app.",
-        "a2h1": "Card Sorting & Information Architecture",
-        "a2p1": "To make sure and have a supporting findings to our vision of new information architecture, we held a card sorting session using Useberry. Our goal was to find smaller, intuitive groupings for following terms, Decentralized Autonomous Organization, Directories, Trust, Organization Profile, Create new organization, Staking Líf (our token) and Competitor’s Organizations. After organizing the data, we ended up with four clearly defined categories, based on our findings from this card sorting session.",
-        "a2h2": "Wireframes",
-        "a2p2": "Using pencil and paper, I translated my first sketches into physical wireframes and later turned them into low-fidelity digital wireframes using Adobe XD. Then, I improved them by adding a few relevant stock images and icons provided by the company. At this stage, the wireframes were defined enough to do user testing. Based on two test sessions, I’ve made a few alternations and moved on to creating final wireframes with more details to them.",
-        "a3h1": "Usability Testing",
-        "a3p1": "In our user test sessions, we have also introduced heat map functionality in to the process, that helped me with later analysis of weak points where users were getting lost or were distracted by other elements to perform chosen tasks. Thanks to this functionality we discovered some weak spots earlier in the process. During final usability test all test subjects passed all tasks without any major issues and in parts that were already in original testing they performed even faster than in first test session and described new design solution as simplified and easy to understand.",
-        "a3h2": "Learning",
-        "a3p2": "We have found out that the design process and methodologies that I have chosen have been successful, however I made a mistake in early phase while ideating first version of new information architecture, but card sorting method and series of inverviews helped me to fix it later on a come up with a new hypotesis that later evolved into functional solution. Besides this, no bigger problems have been occurred along the way and our final goals has been fulfilled maybe even beyond expected level, before project closure. I had a session with Winding Tree where I presented them all my findings and gave them some relevant feedback that I have collected from the users including UX and also other areas."
+        "theme": "purple",
+        "title": "Casting agencies Mobile App",
+        "titleparagraph": "My client for this project was a startup company trying to come up with a business solution to connect fashion models with agencies and event managers. They had very clear business vision and just needed a designer that could articulate their ideas into a final product and help them with shaping some of their functionalities to perfection.",
+        "role": "Product design",
+        "titleimage": "../casting1.png",
+        "secondimage": "../casting2.png",
+        "secondimage2": "../casting3.png",
+        "thirdimage": "../casting4.png",
+        "thirdimage2": "../casting5.png",
+        "fourthimage": "",
+        "fifthimage": "",
+        "problem": "The main problem from the starts was client's lack of experience in a field and bad luck when finding their first agency. The UX and UI delivery that they have received from the agency was nowhere close to what they wanted and that's one of the reasons why the kept searching for a new designer until they found me.",
+        "solution": "After our agreenment on collaboration, we took a step back and started right from the scratch rather then continuing with original logic of the app. The discovery phase was all about explaining me their business idea, analysing current competitors and their design solutions and its problems. After that, we came up with interviewing potential users and started prototyping phase enriched with series of A/B tests and user tests. After delivery of final prototype, I helped client with further support and negotiations with developers.",
+        "a1h1": "Design and Testing",
+        "a1p1": "Firstly, we translated all succesful sketches, wireframes and user flows into high-fidelity prototype. Then, we improved them by adding a few relevant stock images and relevant titles. At this stage, the product was defined enough for some user testing. After succesful a round of user tests with three people from the industry. We were satisfied with state of out product.",
+        "a1h2": "Prototype",
+        "a1p2": "After a few interactions with various agencies. Client have decided to create a simplified lighter variant (MVP) that would be focusing only on primary functionalities and features that bring the most of added value to cut out development costs by not developing secondary features that would be too expensive for early stage of the project.",
+        "a1p3": "Therefore I had to go thru whole process once again and simplify some features to fulfill their wish and then run one more test session where I tested if users can still navigate themselves thru the app.",
+        "a2h1": "",
+        "a2p1": "",
+        "a2h2": "", 
+        "a2p2": "",
+        "a3h1": "",
+        "a3p1": "",
+        "a3h2": "",
+        "a3p2": ""
     },
     {
         "id": 3,
-        "theme": "red",
-        "title": "Solar website",
-        "tag": "UX/UI Design",
+        "theme": "blue",
+        "title": "Solar installations Website",
         "titleparagraph": "The story about how we connected company and its goals with clear web design, communication and customer needs.",
-        "titleparagraphtwo": "My client reached out to me with a need for a functional responsive website that would help them with clear communication that they are number one on the market, build a trust, educate about the topic and get potential client's contact.",
-        "client": "Random",
-        "role": "Product designer",
-        "year": "unknown",
-        "titleimage": "../title3.png",
-        "secondimage": "../fashion2.png",
-        "thirdimage": "../mallari3-1.png",
-        "fourthimage": "../mallari4.png",
-        "fifthimage": "",
+        "titleparagraph2 ": "My client reached out to me with a need for a functional responsive website that would help them with clear communication that they are number one on the market, build a trust, educate about the topic and get potential client's contact.",
+        "role": "UX/UI Design",
+        "titleimage": "../solar1.png",
+        "secondimage": "../solar2.png",
+        "secondimage2": "../solar3.png",
+        "thirdimage": "../solar4.png",
+        "thirdimage2": "../solar5.png",
+        "fourthimage": "../solar6.png",
+        "fourthimage2": "../solar7.png",
         "problem": "Currently there is a large amount of competition when it comes to providing photovoltaic power plants and heat pumps in the central European region. It's hard to stand out, as each company has at least some website and most of them provide a similar service. Unfortunately, not everyone is at the top level and customer can easily end up with a bad offer and bad quality service.",
         "solution": "After analysing current state of the market and my client's needs, we came up with our solution. We have to create easy mobile first responsive web presentation that will stand out with it's clear design, aims at out target audience and educate them with valuable information and present our services in a way that builds trust and has an easy process to get contact information from potential customers.",
         "a1h1": "Journey to our contact form",
