--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,9 @@
   command = "npm run build"
   publish = "dist"
   functions = "netlify/functions"
+
+[[plugins]]
+  package = "@netlify/plugin-inline-functions-env"
+
+[functions]
+  included_files = ["dist/assets/**"]
