--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run build"
+  command = "rm -rf dist/assets && vite build"
   publish = "dist"
   functions = "netlify/functions"
 
@@ -10,3 +10,4 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
