--- a/netlify.toml
+++ b/netlify.toml
@@ -7,7 +7,7 @@
   included_files = ["dist/assets/**"]
 
 [[redirects]]
-  from = "/*"
-  to = "/index.html"
+  from = "/assets/*"
+  to = "/assets/:splat"
   status = 200
 
