--- a/public/project.json
+++ b/public/project.json
@@ -4,7 +4,7 @@
         "theme": "red",
         "title": "Fitness Trainer Website",
         "titleparagraph": "Barbara’s fitness coaching brand needed a robust digital presence to connect with clients, showcase services, and emphasize the results-driven approach to fitness. The goal was to create a user-friendly, visually appealing website to convert visitors into customers.",
-        "role": "UX/UI design",
+        "role": "UX/UI Design",
         "titleimage": "../bara1.png",
         "secondimage": "../bara2.png", 
         "thirdimage": "../bara3.png",
@@ -35,7 +35,7 @@
         "theme": "purple",
         "title": "Casting Agencies Mobile App",
         "titleparagraph": "My client for this project was a startup company trying to come up with a business solution to connect fashion models with agencies and event managers. They had very clear business vision and just needed a designer that could articulate their ideas into a final product and help them with shaping some of their functionalities to perfection.",
-        "role": "Product design",
+        "role": "Product Design",
         "titleimage": "../casting1.png",
         "secondimage": "../casting2.png",
         "secondimage2": "../casting3.png",
